# amethyst-dynamic-prefab

./: Cargo.toml  README.md
examples/assets/prefab/: example.json  example.ron
examples/cube/: main.rs
examples/prefab/: main.rs
src/: bundle.rs  lib.rs  loader.rs  system.rs
type-uuid/: Cargo.toml
type-uuid-derive/: Cargo.toml
type-uuid-derive/src/: lib.rs
type-uuid/src/: amethyst_types.rs  lib.rs
uuid-gen/: Cargo.toml
uuid-gen/src/: main.rs
