[package]
name = "amethyst-dynamic-prefab"
version = "0.1.0"
authors = ["David LeGare <dlegare.1001@gmail.com>"]
edition = "2018"

[workspace]
members = [
    "type-uuid",
    "uuid-gen",
]

[dependencies]
amethyst = "0.10.0"
ron = "0.4.0"
serde = "1.0"
type-uuid = { path = "./type-uuid", features = ["amethyst"] }
uuid = { version = "0.7.1", features = ["u128"] }

[dev-dependencies]
amethyst-editor-sync = "0.4.0"
tap = "0.3.0"
