[package]
name = "amethyst-dynamic-prefab"
version = "0.1.0"
authors = ["David LeGare <dlegare.1001@gmail.com>"]
edition = "2018"

[workspace]
members = [
    "type-uuid",
    "type-uuid-derive",
    "uuid-gen",
]

[dependencies]
amethyst = { version = "0.10.0", features = ["json"] }
log = "0.4.6"
serde = "1.0.84"
serde_json = "1.0.34"
shred = "0.7.1"
shred-derive = "0.5.1"
type-uuid = { path = "./type-uuid", features = ["amethyst"] }
uuid = { version = "0.7.1", features = ["u128"] }

[dev-dependencies]
amethyst-editor-sync = "0.4.0"
tap = "0.3.0"

[patch.crates-io]
# JSON support is broken in the 0.10.0 release, so we temporarily need to
# use the master branch of amethyst in order to have JSON assets.
amethyst = { git = "https://github.com/randomPoison/amethyst", branch = "fix-json-feature" }
amethyst-editor-sync = { git = "https://github.com/amethyst/amethyst-editor-sync" }
